syntax = "proto3";

message HotelData {
    uint32 users = 1;
}
