syntax = "proto3";

import "Navigator/Categories/NavigatorCategoryData.proto";

message NavigatorData {
    repeated NavigatorCategoryData categories = 1;
}
