syntax = "proto3";

message RoomCategoryData {
    string id = 1;
    string title = 2;
}
