syntax = "proto3";

message UserPermissionsData {
    repeated string permissions = 1;
}
